# SOI_Virtual_Drive

./: CMakeLists.txt  README.md  main.c
examples/external_fragmentation/: external_fragmentation_scenario.md
examples/internal_fragmentation/: example1.txt  example2.txt  internal_fragmentation_scenario.md
include/: management.h
src/: management.c
